--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,34 @@
     font-family: Lato-Medium, Helvetica, sans-serif;
     
 }
+
 body{
     background: #8423a1;
 }
+
+#loader{
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    align-items: center;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#loader img{
+    width: 50px;
+    margin: 40vh auto 0 auto;
+}
+
+#pagPrincipal{
+    display: none;
+    text-align: center;
+}
+
+
+
 /*caixa onde os itens de principais itens estão*/
 #principal{
     width: 755px;
@@ -78,7 +103,12 @@ body{
     color: #FAFAFA;
     font-size: 11px;
 }
-
+#email{
+    background: #FAFAFA;
+}
+#senha{
+    background: #FAFAFA;
+}
 #botao{
     background: #B2DFFC;
     border: 1px solid #B2DFFC;
